# NFACT

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  README.md  nfact_config.config  pyproject.toml  ruff.toml
.github/: config.yml  pre-commit
.github/workflows/: linting.yaml  nfact_test.yaml
NFACT/: __main__.py  utils.py  version.py
NFACT/NFACT_DR/: __main__.py  dual_regression.py  nfact_dr_args.py  nfact_dr_functions.py  nfact_dr_set_up.py
NFACT/NFACT_GLM/: __main__.py  glm.py  nfact_glm_args.py  nfact_glm_setup.py
NFACT/NFACT_PP/: __main__.py  nfactpp.py  nfactpp_args.py  nfactpp_check_functions.py  nfactpp_functions.py  nfactpp_probtrackx_functions.py  nfactpp_setup.py  nfactpp_utils.py  nfactpp_utils_functions.py  probtrackx_functions.py
NFACT/NFACT_base/: config.py  filesystem.py  imagehandling.py  logging.py  matrix_handling.py  setup.py  signithandler.py  utils.py
NFACT/NFACT_config/: __main__.py  nfact_config_functions.py
NFACT/NFACT_decomp/: __main__.py
NFACT/NFACT_decomp/decomposition/: decomp.py  matrix_handling.py
NFACT/NFACT_decomp/pipes/: image_handling.py
NFACT/NFACT_decomp/regression/: dual_regression.py
NFACT/NFACT_decomp/setup/: arg_check.py  args.py  configure_setup.py  file_setup.py
NFACT/NFACT_pipeline/: __main__.py  args.py  nfact_pipeline_args.py  nfact_pipeline_functions.py  nfact_pipeline_set_up.py
NFACT/NFACT_testing/: custom_linting.py  generate_connectivity_matrix.py  nfact_decomp_tests.py  nfact_pipeline_test.py  recursive_searching.py
NFACT/NFACT_testing/test_data/: sub-0_fdt_matrix2.dot  sub-1_fdt_matrix2.dot  sub-2_fdt_matrix2.dot
NFACT/base/: base_args.py  cluster_support.py  config.py  filesystem.py  imagehandling.py  logging.py  matrix_handling.py  setup.py  signithandler.py  utils.py
NFACT/config/: __main__.py  nfact_config_functions.py
NFACT/decomp/: __main__.py
NFACT/decomp/setup/: arg_check.py  (+3 more)
NFACT/decomposition/: decomp.py  matrix_handling.py
NFACT/dual_reg/: __main__.py  cluster_run.py  dual_regression.py  local_run.py  nfact_dr_args.py  nfact_dr_functions.py  nfact_dr_set_up.py  run_dual_regression.py  set_up_dual_regression.py
NFACT/file_strucutres/: hcp.tree
NFACT/filetree/: README.md  dev_downsample.tree  hcp.tree  hcp_downsample.tree  hcp_qunex.tree
NFACT/filetrees/: hcp.tree  hcp_qunex.tree
NFACT/glm/: __main__.py  glm.py  nfact_glm_args.py
NFACT/pipeline/: __main__.py  nfact_pipeline_args.py  nfact_pipeline_functions.py
NFACT/pipes/: data_pipes.py  image_handling.py
NFACT/preprocess/: __main__.py  nfactpp.py  nfactpp_args.py  nfactpp_functions.py  nfactpp_setup.py  probtrackx_functions.py
NFACT/qc/: __main__.py  nfactQc_args.py  nfactQc_functions.py
NFACT/regression/: dual_regression.py  glm.py
NFACT/setup/: arg_check.py  args.py  configure_setup.py  file_setup.py  folder_setup.py  setup.py
NFACT/testing/: custom_linting.py  generate_connectivity_matrix.py  nfact_pipeline_test.py
NFACT/utils/: signithandler.py  utils.py
containers/builds/: Dockerfile  Singularity.def
containers/dual_reg/: Dockerfile
(+17 files in other folders)
