# pyproject.toml

[build-system]
requires      = ["setuptools>=44.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NFACT"
version = "1.0.0"
description = "NFACT"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["NFACT"]

dependencies = [
    'scipy',
    'numpy',
    'nibabel',
    'scikit-learn',
    'fslpy',
    'tqdm'
]
requires-python = ">=3.8"
[project.optional-dependencies]
development = ['ruff']

[project.scripts]
nfact = "NFACT.NFACT_decomp.__main__:nfact_main"
nfact_pp = "NFACT.NFACT_PP.__main__:nfact_pp_main"
nfact_config = "NFACT.NFACT_config.__main__:nfact_config_main"
nfact_glm = "NFACT.NFACT_GLM.__main__:nfact_glm_main"
nfact_dr = "NFACT.NFACT_DR.__main__:nfact_dr_main"