# pyproject.toml

[build-system]
requires      = ["setuptools>=44.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NFACT"
version = "1.0.0"
description = "NFACT"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["NFACT"]

dependencies = [
    'scipy',
    'numpy',
    'nibabel',
    'scikit-learn',
    'fslpy',
    'tqdm'
]
requires-python = ">=3.9"
[project.optional-dependencies]
dev = [
    'ruff',
    'pytest'
    ]

[project.scripts]
nfact_decomp = "NFACT.decomp.__main__:nfact_decomp_main"
nfact_pp = "NFACT.preprocess.__main__:nfact_pp_main"
nfact_config = "NFACT.config.__main__:nfact_config_main"
nfact_glm = "NFACT.glm.__main__:nfact_glm_main"
nfact_dr = "NFACT.dual_reg.__main__:nfact_dr_main"
nfact = "NFACT.pipeline.__main__:nfact_pipeline_main"
